# pdf_api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d3b9123d5084_create_tables.py
pdf_api/: app.py  config.py  db.py  models.py
pdf_api/utils/: pdf_parser.py
tests/: conftest.py  test_api.py  test_utils.py
